<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eco112</string>
    <string name="hospitales_cercanos">Hospitales</string>
    <string name="llamada_socorro">Urgencia</string>
    <string name="mostrar_datos">Mis datos</string>
    <string name="desc_flechita">Flechita</string>
    <string name="nombre">Nombre y apellidos</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="grupo_sanguineo">Grupo sanguíneo</string>
    <string name="grupo_sanguineo_caps">GRUPO SANGUÍNEO</string>
    <string name="alergias">Alergias</string>
    <string name="alergias_caps">ALERGIAS</string>
    <string name="telefono_contacto">Teléfono de contacto</string>
    <string name="contacto_caps">CONTACTO</string>
    <string name="padece_diabetes">¿Es usted diabético?</string>
    <string name="consideraciones_especiales_salud">Otras consideraciones especiales de salud</string>
    <string name="consideraciones_especiales_caps">OTRAS CONSIDERACIONES ESPECIALES DE SALUD</string>
    <string name="guardar">Guardar</string>
    <string name="datos_personales">Datos personales</string>
    <string name="mis_datos">Mis datos</string>
    <string name="datos_guardados">Datos guardados</string>
    <string name="persona_contacto">Persona de contacto (parentesco)</string>
    <string name="diabetes_caps">DIABÉTICO</string>
    <string name="policia">Policía</string>
    <string name="ambulancia">Ambulancia</string>
    <string name="bomberos">Bomberos</string>
    <string name="urgencias">Urgencias</string>
    <string name="hospitales_cercanos_title">Hospitales cercanos</string>
    <string name="no_datos_personales">El usuario no ha rellenado sus datos personales</string>
    <string name="emergencias_ambulancia">Emergencias Ambulancia</string>
    <string name="emergencias_policia">Emergencias Policía</string>
    <string name="emergencias_bomberos">Emergencias Bomberos</string>
    <string name="desc_llamar">Llamar al hospital</string>
    <string name="ayuda_solicitada">Ayuda solicitada:</string>
    <string name="emergencia_sufrida">Emergencia sufrida</string>
    <string name="comentarios_adicionales">Comentarios adicionales</string>
    <string name="avisar_112">Avisar al 112</string>
    <string name="avisar_emergencias">Avisar al 112</string>
    <string name="aceptar">Aceptar</string>
    <string name="emergencia_avisada">Su emergencia ha sido notificada al 112. Por favor, mantenga la calma mientras acude la ayuda solicitada</string>
</resources>
