<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_nacimiento"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/etContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/persona_contacto"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_contacto"
            android:inputType="phone"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/etAlergias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:hint="@string/alergias"/>

        <CheckBox
            android:id="@+id/cbDiabetes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/padece_diabetes"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/grupo_sanguineo"/>

            <Spinner
                android:id="@+id/spGrupoSanguineo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:dropDownSelector="@color/blue_eco"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etConsideracionesEspeciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/consideraciones_especiales_salud"/>

        <Button
            android:id="@+id/btAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/guardar"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
    </LinearLayout>
</ScrollView>