<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="left"
    android:padding="15dp">

    <ImageView
        android:id="@+id/ivEmergencia"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/mostrar_datos"/>

    <TextView
        android:id="@+id/tvEmergencia"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bomberos"
        android:gravity="left|center_vertical"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingLeft="20dp"
        />

    <ImageView
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flechita"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/desc_flechita"/>

</LinearLayout>