<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <LinearLayout
            android:id="@+id/ll_hospitales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

        <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospitales_cercanos"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:paddingRight="5dp"
                />
        <ImageView
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/hospital"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/hospitales_cercanos"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_llamada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

        <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/llamada_socorro"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:paddingRight="5dp"
                />
        <ImageView
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="54dp"
                android:src="@drawable/llamada112"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/llamada_socorro"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/ll_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingRight="30dp"
            android:paddingTop="30dp">

        <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_datos"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:paddingRight="5dp"
                />
        <ImageView
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/formulario_grande"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/mostrar_datos"/>
    </LinearLayout>
</LinearLayout>

